Refactor ui package

--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".fragments.main.user.CollectionFragment">
+	tools:context=".ui.fragments.main.user.CollectionFragment">
 	
 	<!-- TODO: Update blank fragment layout -->
 	<TextView
