--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context=".activities.main.MainActivity"
+	tools:context=".ui.activities.main.MainActivity"
 	tools:openDrawer="start">
 	
 	<include
