--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".activities.welcome.WelcomeActivity">
+	tools:context=".ui.activities.welcome.WelcomeActivity">
 	
 	<androidx.fragment.app.FragmentContainerView
 		android:id="@+id/welcome_fragmentConrainerView"
