--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -5,7 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".fragments.main.message.MessageFragment">
+	tools:context=".ui.fragments.main.message.MessageFragment">
 	
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/message_fab_add"
