--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".fragments.main.user.SignUpFragment">
+	tools:context=".ui.fragments.main.user.SignUpFragment">
 	
 	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/signup_input_username"
