--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -7,7 +7,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	app:layoutDescription="@xml/fragment_splash_scene"
-	tools:context=".fragments.splash.SplashFragment">
+	tools:context=".ui.fragments.splash.SplashFragment">
 	
 	<ImageView
 		android:id="@+id/splash_image_icon"
