--- a/app/src/main/res/layout/fragment_welcome1.xml
+++ b/app/src/main/res/layout/fragment_welcome1.xml
@@ -5,7 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".fragments.splash.Welcome1Fragment">
+	tools:context=".ui.fragments.splash.Welcome1Fragment">
 	
 	<ImageView
 		android:id="@+id/welcome1_image"
