--- a/app/src/main/res/layout/fragment_welcome_view_pager.xml
+++ b/app/src/main/res/layout/fragment_welcome_view_pager.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".fragments.splash.WelcomeViewPagerFragment">
+	tools:context=".ui.fragments.splash.WelcomeViewPagerFragment">
 	
 	<androidx.viewpager2.widget.ViewPager2
 		android:id="@+id/welcome_viewPager"
