--- a/app/src/main/res/navigation/welcome_nav.xml
+++ b/app/src/main/res/navigation/welcome_nav.xml
@@ -7,7 +7,7 @@
 	
 	<fragment
 		android:id="@+id/splashFragment"
-		android:name="com.rainbowwolfer.myspacedemo1.fragments.splash.SplashFragment"
+		android:name="com.rainbowwolfer.myspacedemo1.ui.fragments.splash.SplashFragment"
 		android:label="fragment_splash"
 		tools:layout="@layout/fragment_splash">
 		<action
@@ -20,7 +20,7 @@
 	</fragment>
 	<fragment
 		android:id="@+id/welcomeViewPagerFragment"
-		android:name="com.rainbowwolfer.myspacedemo1.fragments.splash.WelcomeViewPagerFragment"
+		android:name="com.rainbowwolfer.myspacedemo1.ui.fragments.splash.WelcomeViewPagerFragment"
 		android:label="fragment_welcome_view_pager"
 		tools:layout="@layout/fragment_welcome_view_pager"/>
 </navigation>
