--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
 		android:layout_width="120dp"
 		android:layout_height="120dp"
 		android:layout_marginTop="32dp"
-		android:contentDescription=""
+		android:contentDescription="@string/app_icon"
 		android:src="@drawable/icon_my_space"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,8 @@
 		android:layout_marginStart="24dp"
 		android:layout_marginTop="24dp"
 		android:layout_marginEnd="24dp"
-		android:hint="Username"
+		android:hint="@string/username"
+		app:errorEnabled="true"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/login_icon"
@@ -45,9 +46,10 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="24dp"
-		android:layout_marginTop="24dp"
+		android:layout_marginTop="8dp"
 		android:layout_marginEnd="24dp"
-		android:hint="Password"
+		android:hint="@string/password"
+		app:errorEnabled="true"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/login_input_username"
@@ -64,8 +66,8 @@
 		android:id="@+id/login_button_login"
 		android:layout_width="140dp"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="32dp"
-		android:text="Sumbit"
+		android:layout_marginTop="8dp"
+		android:text="@string/sumbit"
 		app:icon="@drawable/ic_baseline_check_24"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +79,7 @@
 		android:layout_width="250dp"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="16dp"
-		android:text="Forget Password"
+		android:text="@string/forget_password"
 		app:icon="@drawable/ic_baseline_contact_support_24"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.501"
