--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,4 +10,5 @@
 	<color name="gray_darker">#552c2c2c</color>
 	<color name="gray_lighter">#222c2c2c</color>
 	<color name="gray">#dd2c2c2c</color>
+	<color name="contrast_background">#FF2c2c2c</color>
 </resources>
