--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,4 +11,7 @@
 	<color name="gray_lighter">#222c2c2c</color>
 	<color name="gray">#dd2c2c2c</color>
 	<color name="contrast_background">#FF2c2c2c</color>
+	<color name="gray_text">#8B8B8B</color>
+	<color name="green">#85E64A</color>
+	<color name="normal_text">#D5D5D5</color>
 </resources>
