--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,88 +8,103 @@
 	android:layout_height="match_parent"
 	tools:context=".ui.fragments.main.user.LoginFragment">
 	
-	<de.hdodenhof.circleimageview.CircleImageView
-		android:id="@+id/login_icon"
-		android:layout_width="120dp"
-		android:layout_height="120dp"
-		android:layout_marginTop="32dp"
-		android:contentDescription="@string/app_icon"
-		android:src="@drawable/default_avatar"
-		app:civ_border_color="@color/normal_text"
-		app:civ_border_overlay="true"
-		app:civ_border_width="2dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
-	
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/login_input_email"
-		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+	<ScrollView
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="24dp"
-		android:layout_marginTop="24dp"
-		android:layout_marginEnd="24dp"
-		android:hint="@string/email"
-		app:errorEnabled="true"
+		android:layout_height="match_parent"
+		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.5"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/login_icon"
-		app:startIconDrawable="@drawable/ic_baseline_email_24">
+		app:layout_constraintTop_toTopOf="parent">
 		
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/login_editText_email"
+		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:inputType="textPersonName"
-			android:text="RainbowWolfer@Outlook.com"/>
-	</com.google.android.material.textfield.TextInputLayout>
-	
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/login_input_password"
-		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="24dp"
-		android:layout_marginTop="8dp"
-		android:layout_marginEnd="24dp"
-		android:hint="@string/password"
-		app:errorEnabled="true"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/login_input_email"
-		app:startIconDrawable="@drawable/ic_baseline_lock_24">
+			android:layout_height="wrap_content">
+			
+			<de.hdodenhof.circleimageview.CircleImageView
+				android:id="@+id/login_icon"
+				android:layout_width="120dp"
+				android:layout_height="120dp"
+				android:layout_marginTop="32dp"
+				android:contentDescription="@string/app_icon"
+				android:src="@drawable/default_avatar"
+				app:civ_border_color="@color/normal_text"
+				app:civ_border_overlay="true"
+				app:civ_border_width="2dp"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"/>
+			
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/login_input_email"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="24dp"
+				android:layout_marginTop="24dp"
+				android:layout_marginEnd="24dp"
+				android:hint="@string/email"
+				app:errorEnabled="true"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/login_icon"
+				app:startIconDrawable="@drawable/ic_baseline_email_24">
+				
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/login_editText_email"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:inputType="textPersonName"
+					android:text="RainbowWolfer@Outlook.com"/>
+			</com.google.android.material.textfield.TextInputLayout>
+			
+			<com.google.android.material.textfield.TextInputLayout
+				android:id="@+id/login_input_password"
+				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="24dp"
+				android:layout_marginTop="8dp"
+				android:layout_marginEnd="24dp"
+				android:hint="@string/password"
+				app:errorEnabled="true"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/login_input_email"
+				app:startIconDrawable="@drawable/ic_baseline_lock_24">
+				
+				<com.google.android.material.textfield.TextInputEditText
+					android:id="@+id/login_editText_password"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:inputType="textPassword"
+					android:text="123456"/>
+			</com.google.android.material.textfield.TextInputLayout>
+			
+			<com.google.android.material.button.MaterialButton
+				android:id="@+id/login_button_login"
+				android:layout_width="140dp"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="8dp"
+				android:text="@string/sumbit"
+				app:icon="@drawable/ic_baseline_check_24"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/login_input_password"/>
+			
+			<com.google.android.material.button.MaterialButton
+				android:id="@+id/login_button_forgetPassword"
+				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+				android:layout_width="250dp"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="16dp"
+				android:text="@string/forget_password"
+				app:icon="@drawable/ic_baseline_contact_support_24"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintHorizontal_bias="0.501"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/login_button_login"/>
 		
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/login_editText_password"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:inputType="textPassword"
-			android:text="123456"/>
-	</com.google.android.material.textfield.TextInputLayout>
-	
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/login_button_login"
-		android:layout_width="140dp"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="8dp"
-		android:text="@string/sumbit"
-		app:icon="@drawable/ic_baseline_check_24"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/login_input_password"/>
-	
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/login_button_forgetPassword"
-		style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-		android:layout_width="250dp"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="16dp"
-		android:text="@string/forget_password"
-		app:icon="@drawable/ic_baseline_contact_support_24"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintHorizontal_bias="0.501"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/login_button_login"/>
-
+		</androidx.constraintlayout.widget.ConstraintLayout>
+	</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
