--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
 	<dimen name="list_item_spacing">16dp</dimen>
 	<dimen name="list_item_spacing_half">8dp</dimen>
 	<dimen name="my_corner_radius">20dp</dimen>
+	
+	<dimen name="chip_add_padding">16dp</dimen>
 </resources>
